MC runs with picker zones
Needs change to accessing mc value and calculating picker time